--- a/paint-comparator/index.html
+++ b/paint-comparator/index.html
@@ -146,7 +146,7 @@ a { color: var(--light); }
 </table>
 	<h3>Sources</h3>
 	<a href="https://redgrimm.github.io/paint-conversion/">Redgrimm on Github.io</a><br />
-	<a href=""></a><br />
+	<a href="https://handwiki.org/wiki/List_of_Citadel_paints">Hand Wiki</a><br />
 </section>
 
 </body>
