--- a/paint-comparator/index.html
+++ b/paint-comparator/index.html
@@ -9,7 +9,7 @@
 
 	<title>Miniature paint matcher (Citadel, Vallejo, Army Painter and P3 Formula)</title>
 
-	<link rel="stylesheet" type="text/css" href="http://code.jquery.com/ui/1.13.0/themes/base/jquery-ui.css">
+	<link rel="stylesheet" type="text/css" href="https://code.jquery.com/ui/1.13.0/themes/base/jquery-ui.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
 	<script src="https://code.jquery.com/jquery-3.6.0.js"></script>
