--- a/paint-comparator/index.html
+++ b/paint-comparator/index.html
@@ -158,8 +158,8 @@ a { color: var(--light); }
 	<span class="txt-main">Have you ever seen a miniature online and wished you knew how to pick the colours? Pick the colour you want in hex form and plug
 	it into the search below to get the closest color paint matched. Pick from Citadel and Vellejo (more to come!)</span><br />
 
-	<span class="note">NOTE: You can sort by clicking on the table's headings. Its not a perfect system, but it's something!</span><br />
-	<span>FUN FACT: This uses a mathematics formula called 'Euclidean Distance' to determine the closeness between colors.</span><br />
+	<span class="note">NOTE: You can sort results by clicking on 'Distance' on the table's headings.</span><br />
+	<span>FUN FACT: This uses a mathematics formula called 'Euclidean Distance' to determine the distance between colors.</span><br />
 
 	<span>You can use an Online Color Picker (like this one <a href="https://imagecolorpicker.com/en" target="_blank">here</a>) if you're unsure how to pick colours.</span><br />
 
@@ -183,8 +183,8 @@ a { color: var(--light); }
 	</tbody>
 </table>
 	<h3>Sources</h3>
-	<a href="https://redgrimm.github.io/paint-conversion/">Redgrimm on Github.io</a>
-	<a href="https://handwiki.org/wiki/List_of_Citadel_paints">Hand Wiki</a>
+	<a href="https://redgrimm.github.io/paint-conversion/" target="_blank">Redgrimm on Github.io</a>
+	<a href="https://handwiki.org/wiki/List_of_Citadel_paints" target="_blank">Hand Wiki</a>
 </section>
 
 </body>
@@ -772,4 +772,3 @@ function getCellValue(row, index){ return $(row).children('td').eq(index).text()
 </script>
 
 </html>
-
