--- a/paint-comparator/index.html
+++ b/paint-comparator/index.html
@@ -91,6 +91,7 @@ h1, h2, h3 {
 	padding: 0px;
 	margin: 0px;
 	font-weight: 400;
+	text-align: center;
 }
 
 h1 { font-size: 2.2rem; }
@@ -156,7 +157,7 @@ a { color: var(--light); }
 <section id="input-col">
 	<h1>Paint comparator</h1><br />
 	<span class="txt-main">Have you ever seen a miniature online and wished you knew how to pick the colours? Pick the colour you want in hex form and plug
-	it into the search below to get the closest color paint matched. Pick from Citadel and Vellejo (more to come!)</span><br />
+	it into the search below to get the closest color paint matched. Pick from Citadel, Vellejo, Army Painter and P3 Formula.</span><br />
 
 	<span class="note">NOTE: You can sort results by clicking on 'Distance' on the table's headings.</span><br />
 	<span>FUN FACT: This uses a mathematics formula called 'Euclidean Distance' to determine the distance between colors.</span><br />
@@ -778,4 +779,5 @@ function getCellValue(row, index){ return $(row).children('td').eq(index).text()
 </script>
 
 </html>
+
 
