--- a/paint-comparator/index.html
+++ b/paint-comparator/index.html
@@ -615,6 +615,29 @@ let arrPaints = [
 ["Yellow Olive","Vallejo Model ", "26392e"],
 ["Yriel Yellow","Citadel", "FFDA00"],
 ["Zamesi Desert","Citadel", "DDA026"],
+["Thondia Brown","Citadel", "54302A"],
+["Hobgrot Brown","Citadel", "A0802B"],
+["Orruk Flesh","Citadel", "8CC277"],
+["Corvus Black","Citadel", "171314"],
+["Catachan Flesh","Citadel", "442B25"],
+["Ionrach flesh","Citadel", "97A384"],
+["Morghast Bone","Citadel", "C0A973"],
+["Nocturne Green","Citadel", "162A29"],
+["Death Corps Drab","Citadel", "3D4539"],
+["Lupercal Green","Citadel", "002C2B"],
+["Night Lords Blue","Citadel", "002B5C"],
+["Phoenician Purple","Citadel", "440052"],
+["Barak-Nar Burgundy","Citadel", "451636"],
+["Gal Vorbak Red","Citadel", "4B213C"],
+["Bloodreaver Flesh","Citadel", "6A4848"],
+["Knight-Questor Flesh","Citadel", "996563"],
+["Deepkin Flesh","Citadel", "A9B79F"],
+["Krieg Khaki","Citadel", "BCBB7E"],
+["Vulkan Green","Citadel", "223C2E"],
+["Sons of Horus Green","Citadel", "00545E"],
+["Gauss Blaster Green","Citadel", "7FC1A5"],
+["Kakaphoni Purple","Citadel", "8869AE"],
+["Phalanx Yellow","Citadel", "FFE200"],
 ["Zandri Dust","Citadel", "9E915C"]
 ];
 
