--- a/paint-comparator/index.html
+++ b/paint-comparator/index.html
@@ -305,7 +305,7 @@ let arrPaints = [
 ["Deep Yellow","Vallejo Model ", "ffe30c"],
 ["Dirt Spatter","Army Painter ", "5e3827"],
 ["Doombull Brown","Citadel", "5D0009"],
-["Dorn Yellow","Citadel", "FFF200"],
+["Dorn Yellow","Citadel", "FFF55A"],
 ["Dragon Red","Army Painter ", "9a1b1e"],
 ["Drake Tooth","Army Painter ", "cfcbb4"],
 ["Drakenhof Nightshade","Citadel", "125899"],
@@ -331,7 +331,7 @@ let arrPaints = [
 ["Filthy Cape","Army Painter ", "7c7863"],
 ["Fire Dragon Bright","Citadel", "F58652"],
 ["Fire Lizard","Army Painter ", "d67128"],
-["Flash Gitz Yellow","Citadel", "FFF200"],
+["Flash Gitz Yellow","Citadel", "FFF300"],
 ["Flat Blue","Vallejo Model ", "336991"],
 ["Flat Earth","Vallejo Model ", "87643c"],
 ["Flat Flesh","Vallejo Model ", "d8a977"],
