--- a/index.html
+++ b/index.html
@@ -7,49 +7,12 @@
 
 	<link rel="stylesheet" type="text/css" href="http://code.jquery.com/ui/1.13.0/themes/base/jquery-ui.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+	<link rel="stylesheet" href="global.css">
 
 	<script src="https://code.jquery.com/jquery-3.6.0.js"></script>
 	<script src="https://code.jquery.com/ui/1.13.0/jquery-ui.js"></script>
 
 <style>
-* {
-	/*--color: rgb(110,43,85); /* Hosp */
-	/*--color: rgb(129,20,83); /* French Plum */
-	/*--color: rgb(102,56,84); /* Ube Halaya */
-	--color: rgb(112,41,99); /* Byzantium */
-	/*--color: rgb(104,40,96); /* Palatinate */
-	--light: rgb(242,242,247);
-	--dark: rgb(42,42,47);
-}
-
-body {
-    background-attachment: fixed;
-    padding: 0px;
-    margin: 0px;
-    background: var(--light);
-    font-family: 'Nunito', sans-serif;
-    font-size: 1.25rem;
-    font-weight: 300;
-    color: var(--dark);
-    animation: fadein 2s;
-    overflow-x: hidden;
-}
-
-h1 { font-size: 1.8rem; font-weight: 600; }
-h2 { font-size: 1.3rem; font-weight: 400; }
-h3 { font-size: 1.25rem; font-weight: 400; }
-
-
-.section {
-	width: 100vw;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	flex-direction: column;
-	padding: 3rem 1.5rem;
-	vertical-align: baseline;
-}
-
 #projects {
 	padding: 0rem 0rem;
 }
