--- a/index.html
+++ b/index.html
@@ -3,7 +3,13 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>UX Test</title>
+	<meta charset="UTF-8">
+	<meta name="description" content="Arbitrary projects designed to display my ability to develop websites, fun projects and cybersecurity skills">
+	<meta name="keywords" content="CSS, JavaScript, Cybersecurity, Nick Ryden, Web development, projects">
+	<meta name="author" content="Nick Ryden">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	
+	<title>Nick Ryden - Arbitrary Projects (Web & Cybersecurity)</title>
 
 	<link rel="stylesheet" type="text/css" href="http://code.jquery.com/ui/1.13.0/themes/base/jquery-ui.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
