--- a/c-dist/index.html
+++ b/c-dist/index.html
@@ -6,6 +6,7 @@
 	<meta name="description" content>
 	<meta name="keywords" content="Citadel, Vallejo, P3 Formula, Army Painter, comparison, search, conversion, matcher, match">
 	<meta name="author" content="Nick Ryden">
+	<link rel="stylesheet" href="global.css">
 
 	<title>Tchebychev Distance</title>
 
@@ -25,37 +26,9 @@
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400&display=swap" rel="stylesheet">
 
 <style>
-* {
-	--dark: #333;
-	--light: rgb(242,242,247);
-	--color: #008888;
-	transition: 0.5s;
-}
-
 ::selection {
 	background: var(--color);
 	color: var(--light);
-}
-
-body {
-	padding: 0px;
-	margin: 0px;
-	color: var(--light);
-	font-family: 'Roboto', sans serif;
-	font-weight: 300;
-	overflow-x: hidden;
-	background: rgb(128,128,128);
-}
-
-section {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	flex-direction: column;
-	background: rgb(128,128,128);
-	width: 100vw;
-	max-width: 100vw;
-	padding: 30px 0px;
 }
 
 span, h1, h2, h3 { font-weight: 400; }
@@ -67,9 +40,6 @@ h1, h2, h3 {
 	text-align: center;
 }
 
-h1 { font-size: 2.2rem; }
-h2 { font-size: 1.8rem; }
-h3 { font-size: 1.4rem; }
 span { font-size: 1.0rem; }
 
 span {
