--- a/light-sabre/index.html
+++ b/light-sabre/index.html
@@ -1,21 +1,8 @@
+<head>
 <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+<link rel="stylesheet" href="global.css">
 
 <style>
-@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200;300;400;600&display=swap');
-
-html, body { padding:0; margin:0;}
-
-body {
-	background: #444;
-	color: #e5e5e5;
-	font-size: 2.8rem;
-	font-family: 'Source Sans Pro';
-	transition: 0.2s;
-	background-image: url("https://www.transparenttextures.com/patterns/rocky-wall.png");
-	font-size: 11pt;
-	min-height: 100%;
-}
-
 #rando {
 	position: absolute;
 	left: 50%;
@@ -238,7 +225,8 @@ body {
 
 
 </style>
-
+</head>
+	
 <div id="rando">
 </div>
 
