--- a/index.html
+++ b/index.html
@@ -3,22 +3,25 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta charset="UTF-8">
-	<meta name="description" content="Arbitrary projects designed to display my ability to develop websites, fun projects and cybersecurity skills">
-	<meta name="keywords" content="CSS, JavaScript, Cybersecurity, Nick Ryden, Web development, projects">
-	<meta name="author" content="Nick Ryden">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	
-	<title>Nick Ryden - Arbitrary Projects (Web & Cybersecurity)</title>
+	<title>UX Test</title>
 
 	<link rel="stylesheet" type="text/css" href="http://code.jquery.com/ui/1.13.0/themes/base/jquery-ui.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-	<link rel="stylesheet" href="global.css">
 
 	<script src="https://code.jquery.com/jquery-3.6.0.js"></script>
 	<script src="https://code.jquery.com/ui/1.13.0/jquery-ui.js"></script>
 
 <style>
+* {
+	/*--color: rgb(110,43,85); /* Hosp */
+	/*--color: rgb(129,20,83); /* French Plum */
+	/*--color: rgb(102,56,84); /* Ube Halaya */
+	--color: rgb(112,41,99); /* Byzantium */
+	/*--color: rgb(104,40,96); /* Palatinate */
+	--light: rgb(242,242,247);
+	--dark: rgb(42,42,47);
+}
+
 #projects {
 	padding: 0rem 0rem;
 }
@@ -120,47 +123,12 @@
     padding-left: 20px;
 }
 
-
-
-#cred-shuffle {
-    width: 60%;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
-    float: left;
-    cursor: pointer;
-}
-
-#cred-shuffle div {
-	display: flex;
-	flex-basis: 15%;
-	width: calc((100% / 5) - 50px );
-	margin: 10px;
-	padding: 10px;
-	box-shadow: inset -5px -5px 10px #fff;
-}
-
-#cred-shuffle div img {
-	width: 100%;
-	max-width: 200px;
-	height: auto;
-	padding: 10px;
-	border-radius: 10px;
-	box-shadow: inset 0px 0px 5px var(--light);
-	background: linear-gradient(-45deg, #FFF, rgb(202,202,205));
-	border: 2px solid rgb(174,174,175);
-}
-
-#cred-shuffle div img:hover {
-	border: 2px solid var(--color);
-}
-
 a {
 	text-decoration: none;
 }
 </style>
+
+<link rel="stylesheet" href="global.css">
 
 <section class="section projects">
 	<h1 class="proj-title">Nick Ryden - Arbitrary Projects (Web &amp; Cybersecurity)</h1>
@@ -175,13 +143,15 @@ a {
 <script>
 let arrPro = [
 	['color-change','Color formats','Use Hex, RGB, HSL, Hex-Alpha, RGBA and HSLA to convert to any common colour format.'],
+	['color-palletes','Color palette generator','Randomised colour palettes using P5.js to generate random colour palettes with hex values and names.'],
 	['paint-comparator','Color Paint Matcher','Color matching hobby paints from Citadel, Vallejo, Army Painter and P3 Formula.'],
 	['alpha-cipher','Cipher using different alphabets','A cipher created using different symbols and alphabets to randomise characters. WHile  not secure, its a demonstration of basic cryptography.'],
 	['c-dist','Tchebychev Distance','Challenging myself to code Tchebychev Distance for a King\'s move in Chess and warehouse logistics operations.'],
 	['light-sabre','Lightsabres!','CSS Light sabres with ransomised movement directions.'],
-	['random-pulse','Ransomised Pulse','SVG AV pulse with random heights, since pulses are never the same.'],
-	['bg-time','Time-dependant Backgrounds','Dynamic backgrounds using time and opacity values to determine whenn and how an image is loaded and viewed.'],
-	['email-regex','Email regex validation','Validating emails to determine whether a POST can occur.'],
+	//['light-dark-colour','Lighten and Darken colours in JS','Utilising Javascript to help light and darken hex colours.'],
+	//['random-pulse','Ransomised Pulse','SVG AV pulse with random heights, since pulses are never the same.'],
+	//['bg-time','Time-dependant Backgrounds','Dynamic backgrounds using time and opacity values to determine whenn and how an image is loaded and viewed.'],
+	//['email-regex','Email regex validation','Validating emails to determine whether a POST can occur.'],
 	['','',''],
 	//['','',''],
 	//['','',''],
@@ -200,7 +170,7 @@ let base = 'https://nickryden.github.io/';
 
 for (i=0; i < arrPro.length;i++) {
 	output = '';
-	output += '<a href="'+ base + '/' + arrPro[i][0] + '" target="_blank">';
+	output += '<a href="'+ base + arrPro[i][0] + '" target="_blank">';
 	output += '<div class="blog-post">';
 	output += '<div class="blog-details">';
 	output += '<div class="blog-image" style="background: url("' + arrPro[i][0] + '.png");background-size: 100% 100%;"></div>';
@@ -215,3 +185,7 @@ for (i=0; i < arrPro.length;i++) {
 }
 
 </script>
+
+
+
+
