--- a/alpha-cipher/index.html
+++ b/alpha-cipher/index.html
@@ -1,4 +1,5 @@
 <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+<link rel="stylesheet" href="../global.css">
 
 <style>
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200;300;400;600&display=swap');
