--- a/c-dist/index.html
+++ b/c-dist/index.html
@@ -6,7 +6,7 @@
 	<meta name="description" content>
 	<meta name="keywords" content="Citadel, Vallejo, P3 Formula, Army Painter, comparison, search, conversion, matcher, match">
 	<meta name="author" content="Nick Ryden">
-	<link rel="stylesheet" href="global.css">
+	<link rel="stylesheet" href="../global.css">
 
 	<title>Tchebychev Distance</title>
 
