--- a/color-change/index.html
+++ b/color-change/index.html
@@ -1,5 +1,5 @@
 <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
-<link rel="stylesheet" href="global.css">
+<link rel="stylesheet" href="../global.css">
 
 <style>
 #color-container, #color-summary { margin: auto; }
