--- a/light-sabre/index.html
+++ b/light-sabre/index.html
@@ -1,6 +1,6 @@
 <head>
 <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
-<link rel="stylesheet" href="global.css">
+<link rel="stylesheet" href="../global.css">
 
 <style>
 #rando {
