--- a/paint-comparator/index.html
+++ b/paint-comparator/index.html
@@ -6,7 +6,7 @@
 	<meta name="description" content>
 	<meta name="keywords" content="Citadel, Vallejo, P3 Formula, Army Painter, comparison, search, conversion, matcher, match">
 	<meta name="author" content="Nick Ryden">
-	<link rel="stylesheet" href="global.css">
+	<link rel="stylesheet" href="../global.css">
 
 	<title>Miniature paint matcher (Citadel, Vallejo, Army Painter and P3 Formula)</title>
 
