--- a/alpha-cipher/index.html
+++ b/alpha-cipher/index.html
@@ -1,29 +1,13 @@
 <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
-<link rel="stylesheet" href="../global.css">
+<link rel="stylesheet" href="global.css">
 
 <style>
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200;300;400;600&display=swap');
 
-html, body { padding:0; margin:0;}
-
-body {
-	background: #444;
-	color: #e5e5e5;
-	font-size: 2.8rem;
-	font-family: 'Source Sans Pro';
-	transition: 0.2s;
-	background-image: url("https://www.transparenttextures.com/patterns/rocky-wall.png");
-	font-size: 11pt;
-	min-height: 100%;
-}
-
 #output-encode {
-	position: absolute;
-	top: 0%;
-	left: 30%;
 	height: 93%;
 	width: 69%;
-
+	margin: 0 auto;
 	color: #3A3A3A;
 	text-shadow: 1px 1px 3px #555, -1px -1px 1px #000;
 	-webkit-background-clip: text;
@@ -35,28 +19,31 @@ body {
 }
 
 textarea {
-	position: absolute;
-	top: 0;
-	left: 0;
-	height: 100%;
-	width: 25%;
 	background: transparent;
 	padding: 20px;
+	width: 300px;
+	height: 10vw;
+	box-shadow: 5px 5px 10px #000;
 }
 
-#passkey {
-	position: absolute;
-	right: 0px;
+textarea:focus {
+	outline: none;
 }
+
 </style>
 
-<div id="cipher">
-<textarea id="input-encode"></textarea>
-<pre id="output-encode"></pre>
-<pre id="output-decode"></pre>
-<pre id="output-passkey"></pre>
-<input type="text" id="passkey" />
+<section>
+	<h1>Multi-alphabet cipher</h1>
+	<span>This is a demonstration of a multi-alphabet cipher, vowels are randomised to be one of any other vowel's symbol preventing brute force. </span> <br />
+	<span>This cipher uses a combination of the Greek and Latin Alphabet plus Nordic runes to represent uppercase and lowercase Latin alphabet and symbols.</span> <br />
+	<div id="cipher">
+	<textarea id="input-encode" placeholder="Enter text"></textarea>
+	<pre id="output-encode"></pre>
+	<!-- <pre id="output-decode"></pre>
+	<pre id="output-passkey"></pre>
+	<input type="text" id="passkey" /> -->
 </div>
+</section>
 
 <script>
 let keyLatin = "ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789!`~!@#$%^&*()_+-=[]{}\\|;:'\"<>,.?/ ";
