--- a/paint-comparator/index.html
+++ b/paint-comparator/index.html
@@ -195,6 +195,7 @@ let arrPaints = [
 ["Balor Brown","Citadel", "8B5910"],
 ["Balthasar Gold (Metal)","Citadel", "A47552"],
 ["Baneblade Brown","Citadel", "937F6D"],
+["Barak-Nar Burgundy","Citadel", "451636"],
 ["Barbarian Flesh","Army Painter ", "e89c6c"],
 ["Bastion Grey","P3 Formula ", "777965"],
 ["Battledress Green","P3 Formula ", "757232"],
@@ -208,6 +209,7 @@ let arrPaints = [
 ["Biel-Tan Green","Citadel", "1BA169"],
 ["Black Green","Vallejo Model ", "19423e"],
 ["Black","Vallejo Game ", "000000"],
+["Bloodreaver Flesh","Citadel", "6A4848"],
 ["Bloodstone","P3 Formula ", "9e4822"],
 ["Bloodtracker Brown","P3 Formula ", "a66a28"],
 ["Bloody Red","Vallejo Game ", "bf282e"],
@@ -234,6 +236,7 @@ let arrPaints = [
 ["Carroburg Crimson","Citadel", "A82A70"],
 ["Casandora Yellow","Citadel", "FECE5A"],
 ["Castellan Green","Citadel", "314821"],
+["Catachan Flesh","Citadel", "442B25"],
 ["Cavalry Brown","Vallejo Model ", "853f3d"],
 ["Cayman Green","Vallejo Game ", "285648"],
 ["Celestra Grey","Citadel", "90A8A8"],
@@ -249,6 +252,7 @@ let arrPaints = [
 ["Combat Fatigue","Army Painter ", "878e5c"],
 ["Commando Green","Army Painter ", "827b39"],
 ["Corpse Pale","Army Painter ", "edccad"],
+["Corvus Black","Citadel", "171314"],
 ["Crystal Blue","Army Painter ", "0083c2"],
 ["Cryx Bane Base","P3 Formula ", "303924"],
 ["Cryx Bane Highlight","P3 Formula ", "93907d"],
@@ -272,6 +276,7 @@ let arrPaints = [
 ["Dawnstone","Citadel", "919C9F"],
 ["Dead Flesh","Vallejo Game ", "bcb686"],
 ["Dead White","Vallejo Game ", "ffffff"],
+["Death Corps Drab","Citadel", "3D4539"],
 ["Death Guard Green","Citadel", "848A66"],
 ["Deathclaw Brown","Citadel", "B36853"],
 ["Deathworld Forest","Citadel", "5C6730"],
@@ -279,9 +284,10 @@ let arrPaints = [
 ["Deep Blue","Army Painter ", "083251"],
 ["Deep Sky Blue","Vallejo Model ", "00a6da"],
 ["Deep Yellow","Vallejo Model ", "ffe30c"],
+["Deepkin Flesh","Citadel", "A9B79F"],
 ["Dirt Spatter","Army Painter ", "5e3827"],
 ["Doombull Brown","Citadel", "5D0009"],
-["Dorn Yellow","Citadel", "FFF55A"],
+["Dorn Yellow","Citadel", "FFF200"],
 ["Dragon Red","Army Painter ", "9a1b1e"],
 ["Drake Tooth","Army Painter ", "cfcbb4"],
 ["Drakenhof Nightshade","Citadel", "125899"],
@@ -307,7 +313,7 @@ let arrPaints = [
 ["Filthy Cape","Army Painter ", "7c7863"],
 ["Fire Dragon Bright","Citadel", "F58652"],
 ["Fire Lizard","Army Painter ", "d67128"],
-["Flash Gitz Yellow","Citadel", "FFF300"],
+["Flash Gitz Yellow","Citadel", "FFF200"],
 ["Flat Blue","Vallejo Model ", "336991"],
 ["Flat Earth","Vallejo Model ", "87643c"],
 ["Flat Flesh","Vallejo Model ", "d8a977"],
@@ -319,6 +325,8 @@ let arrPaints = [
 ["Fuegan Orange","Citadel", "C77E4D"],
 ["Fulgrim Pink","Citadel", "F4AFCD"],
 ["Fulgurite Copper (Metal)","Citadel", "FCFCDE"],
+["Gal Vorbak Red","Citadel", "4B213C"],
+["Gauss Blaster Green","Citadel", "7FC1A5"],
 ["Gauss Blaster Green","Citadel", "84C3AA"],
 ["Gehenna's Gold (Metal)","Citadel", "DBA674"],
 ["Genestealer Purple","Citadel", "7761AB"],
@@ -365,6 +373,7 @@ let arrPaints = [
 ["Hellion Green","Citadel", "84C3AA"],
 ["Hexed Lichen","Vallejo Game ", "34274d"],
 ["Hexos Palesun","Citadel", "FFF200"],
+["Hobgrot Brown","Citadel", "A0802B"],
 ["Hoeth Blue","Citadel", "4C7FB4"],
 ["Hoeth Blue","Citadel", "57A9D4"],
 ["Hot Orange","Vallejo Game ", "e43027"],
@@ -375,6 +384,7 @@ let arrPaints = [
 ["Imrik Blue","Citadel", "67AED0"],
 ["Incubi Darkness","Citadel", "0B474A"],
 ["Intermediate Green","Vallejo Model ", "49944f"],
+["Ionrach flesh","Citadel", "97A384"],
 ["Iosan Green","P3 Formula ", "22a854"],
 ["Iraqi Sand","Vallejo Model ", "b89972"],
 ["Ironbreaker (Metal)","Citadel", "A1A6A9"],
@@ -383,6 +393,7 @@ let arrPaints = [
 ["Jokaero Orange","Citadel", "EE3823"],
 ["Jungle Green","Army Painter ", "88ac2e"],
 ["Kabalite Green","Citadel", "038C67"],
+["Kakaphoni Purple","Citadel", "8869AE"],
 ["Kantor Blue","Citadel", "002151"],
 ["Karak Stone","Citadel", "BB9662"],
 ["Khador Red Base","P3 Formula ", "ee2824"],
@@ -392,8 +403,10 @@ let arrPaints = [
 ["Khorne Red","Citadel", "6A0001"],
 ["Kindleflame","Citadel", "F79E86"],
 ["Kislev Flesh","Citadel", "D6A875"],
+["Knight-Questor Flesh","Citadel", "996563"],
 ["Kobold Skin","Army Painter ", "c9a484"],
 ["Kraken Skin","Army Painter ", "71c591"],
+["Krieg Khaki","Citadel", "BCBB7E"],
 ["Krieg Khaki","Citadel", "C0BD81"],
 ["Leadbelcher (Metal)","Citadel", "888D8F"],
 ["Leather Brown","Army Painter ", "764823"],
@@ -411,6 +424,7 @@ let arrPaints = [
 ["Lucius Lilac","Citadel", "B69FCC"],
 ["Luftwaffe Cam. Green","Vallejo Model ", "596b3f"],
 ["Lugganath Orange","Citadel", "F79E86"],
+["Lupercal Green","Citadel", "002C2B"],
 ["Macragge Blue","Citadel", "0D407F"],
 ["Magenta","Vallejo Model ", "a92a56"],
 ["Magic Blue","Vallejo Game ", "024381"],
@@ -428,6 +442,7 @@ let arrPaints = [
 ["Monster Brown","Army Painter ", "855c2a"],
 ["Moon Yellow","Vallejo Game ", "fff103"],
 ["Moot Green","Citadel", "52B244"],
+["Morghast Bone","Citadel", "C0A973"],
 ["Morrow White","P3 Formula ", "FEFBFD"],
 ["Mournfang Brown","Citadel", "640909"],
 ["Murderous Magenta","P3 Formula ", "a81f5e"],
@@ -438,6 +453,8 @@ let arrPaints = [
 ["Necron Compound (Metal)","Citadel", "828B8E"],
 ["Necrotic Flesh","Army Painter ", "bfc292"],
 ["Niblet Green","Citadel", "7DC734"],
+["Night Lords Blue","Citadel", "002B5C"],
+["Nocturne Green","Citadel", "162A29"],
 ["Nuln Oil (Gloss)","Citadel", "14100E"],
 ["Nuln Oil","Citadel", "14100E"],
 ["Nurgling Green","Citadel", "849C63"],
@@ -450,6 +467,7 @@ let arrPaints = [
 ["Orange Fire","Vallejo Game ", "f1652e"],
 ["Orc Blood","Army Painter ", "925f6e"],
 ["Ordic Olive","P3 Formula ", "6e7e36"],
+["Orruk Flesh","Citadel", "8CC277"],
 ["Oxford Blue","Vallejo Model ", "3a465f"],
 ["Pale Blue","Vallejo Model ", "83b5b2"],
 ["Pale Flesh","Vallejo Game ", "f6bdb3"],
@@ -460,6 +478,8 @@ let arrPaints = [
 ["Parasite Brown","Vallejo Game ", "b1481f"],
 ["Park Green Flat","Vallejo Model ", "008c5d"],
 ["Pastel Blue","Vallejo Model ", "67859b"],
+["Phalanx Yellow","Citadel", "FFE200"],
+["Phoenician Purple","Citadel", "440052"],
 ["Phoenix Flames","Army Painter ", "faa61a"],
 ["Pink Horror","Citadel", "90305D"],
 ["Plague Brown","Vallejo Game ", "cc9b34"],
@@ -506,6 +526,7 @@ let arrPaints = [
 ["Slaanesh Grey","Citadel", "8E8C97"],
 ["Slaanesh Grey","Citadel", "DBD5E6"],
 ["Sombre Grey","Vallejo Game ", "4c5c7d"],
+["Sons of Horus Green","Citadel", "00545E"],
 ["Sotek Green","Citadel", "0B6974"],
 ["Spaceship Exterior","Army Painter ", "cdced0"],
 ["Squig Orange","Citadel", "AA4F44"],
@@ -536,6 +557,7 @@ let arrPaints = [
 ["Terracota","Vallejo Game ", "6b1306"],
 ["Thamar Black","P3 Formula ", "040707"],
 ["The Fang Grey","Citadel", "436174"],
+["Thondia Brown","Citadel", "54302A"],
 ["Thornwood Green","P3 Formula ", "65654b"],
 ["Thousand Sons Blue","Citadel", "18ABCC"],
 ["Thunderhawk Blue","Citadel", "417074"],
@@ -568,6 +590,7 @@ let arrPaints = [
 ["Violet Red","Vallejo Model ", "6b2946"],
 ["Violet","Vallejo Model ", "4b2f65"],
 ["Voidshield Blue","Army Painter ", "2ca2d9"],
+["Vulkan Green","Citadel", "223C2E"],
 ["Waaagh! Flesh","Citadel", "1F5429"],
 ["Warboss Green","Citadel", "3E805D"],
 ["Warlord Purple","Vallejo Game ", "7d1a44"],
@@ -591,29 +614,6 @@ let arrPaints = [
 ["Yellow Olive","Vallejo Model ", "26392e"],
 ["Yriel Yellow","Citadel", "FFDA00"],
 ["Zamesi Desert","Citadel", "DDA026"],
-["Thondia Brown","Citadel", "54302A"],
-["Hobgrot Brown","Citadel", "A0802B"],
-["Orruk Flesh","Citadel", "8CC277"],
-["Corvus Black","Citadel", "171314"],
-["Catachan Flesh","Citadel", "442B25"],
-["Ionrach flesh","Citadel", "97A384"],
-["Morghast Bone","Citadel", "C0A973"],
-["Nocturne Green","Citadel", "162A29"],
-["Death Corps Drab","Citadel", "3D4539"],
-["Lupercal Green","Citadel", "002C2B"],
-["Night Lords Blue","Citadel", "002B5C"],
-["Phoenician Purple","Citadel", "440052"],
-["Barak-Nar Burgundy","Citadel", "451636"],
-["Gal Vorbak Red","Citadel", "4B213C"],
-["Bloodreaver Flesh","Citadel", "6A4848"],
-["Knight-Questor Flesh","Citadel", "996563"],
-["Deepkin Flesh","Citadel", "A9B79F"],
-["Krieg Khaki","Citadel", "BCBB7E"],
-["Vulkan Green","Citadel", "223C2E"],
-["Sons of Horus Green","Citadel", "00545E"],
-["Gauss Blaster Green","Citadel", "7FC1A5"],
-["Kakaphoni Purple","Citadel", "8869AE"],
-["Phalanx Yellow","Citadel", "FFE200"],
 ["Zandri Dust","Citadel", "9E915C"]
 ];
 
